Added bootstrap styling to the whole web page

--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -1,5 +1,10 @@
-.start{
+.jumbotron{
     display: grid;
     place-items:center;
     margin: 20px;
+}
+
+a{
+    width: max-content;
+    margin-bottom: .5rem;
 }
